<resources>
    <string name="app_name">Lab2.2 Profile</string>
    <string name="profile_image">Profile Image</string>
    <string name="web">Web</string>
    <string name="phone">Phone</string>
    <string name="email">E-mail</string>
    <string name="name">Name</string>
    <string name="update">Update</string>
    <string name="save">Save</string>
    <string name="home">Home</string>

</resources>
