<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.taruc.lab22profile.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/profile_image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/user"
        tools:layout_editor_absoluteY="16dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="14dp"
        android:text="@string/name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="RtlHardcoded"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textViewMail"
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/email"
        app:layout_constraintTop_toBottomOf="@+id/textViewName"
        tools:ignore="MissingConstraints"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageButton
        android:id="@+id/imageButtonWeb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="33dp"
        android:contentDescription="@string/web"
        android:onClick="visitBAIT2073"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMail"
        app:srcCompat="@drawable/ic_web_black_24dp"
        tools:ignore="MissingConstraints,VectorDrawableCompat" />

    <ImageButton
        android:id="@+id/imageButtonPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="31dp"
        android:contentDescription="@string/phone"
        android:onClick="showDial"
        app:layout_constraintLeft_toRightOf="@+id/imageButtonWeb"
        app:layout_constraintTop_toBottomOf="@+id/textViewMail"
        app:srcCompat="@drawable/ic_smartphone_black_24px"
        tools:ignore="RtlHardcoded,VectorDrawableCompat" />

    <ImageButton
        android:id="@+id/imageButtonMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="31dp"
        android:contentDescription="@string/email"
        android:onClick="showSendTo"
        app:layout_constraintLeft_toRightOf="@+id/imageButtonPhone"
        app:layout_constraintTop_toBottomOf="@+id/textViewMail"
        app:srcCompat="@drawable/ic_email_black_24dp"
        tools:ignore="MissingConstraints,RtlHardcoded,VectorDrawableCompat" />

    <ImageButton
        android:id="@+id/imageButtonHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/home"
        android:onClick="showMain"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/imageButtonMail"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMail"
        app:srcCompat="@drawable/ic_home_black_24dp"
        tools:ignore="MissingConstraints,RtlHardcoded,VectorDrawableCompat" />

    <Button
        android:id="@+id/buttonUpdate"
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:onClick="updateProfile"
        android:text="@string/update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints" />

</android.support.constraint.ConstraintLayout>
